--- a/adminpaneli/index.html
+++ b/adminpaneli/index.html
@@ -17,7 +17,7 @@
 </head>
 <body style="background-color:#0F172B;">
 
-  <iframe src="https://usoft-projects.github.io/alfawaffle/2/" class="responsive-iframe" allowfullscreen></iframe>
+  <iframe src="https://usoft-projects.github.io/alfawaffle/Dashboard/" class="responsive-iframe" allowfullscreen></iframe>
 
 </body>
 </html>
